	PR c++/60409 	* semantics.c (force_paren_expr): Only add a PAREN_EXPR to a 	dependent expression.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@208352 138bc75d-0d04-0410-961f-82ee72b054a4